fixed dark mode stuff & rainbow size on desktop

--- a/style.css
+++ b/style.css
@@ -338,6 +338,17 @@ p{
         flex-direction: row;
         float: right;
     }
+    #rainbow{
+        position: absolute;
+        height: 150%;
+        display: flex;
+        flex-direction: row;
+        transform: rotate(25deg);
+    }
+    .rcolor{
+        width: 10px;
+        
+    }
     .sm-button{
         width: 5vh;
         height: 5vh;
@@ -419,7 +430,7 @@ p{
         position:relative;
         display: flex;
         flex-direction: column;
-        justify-content:flex-start;
+        justify-content:center;
         align-items: center;
         margin:20px 10px;
         background-color: white;
@@ -446,7 +457,7 @@ p{
     .project-tag{
         bottom: -1.5em;
         position: absolute;
-        background-color: #202020;
+        background-color: black;
         color:white;
         border-radius: 0.5em;
         text-transform: uppercase;
@@ -549,6 +560,18 @@ p{
     .triangle{
         border-bottom: 0.6em solid #fff;
         border-left: 0.6em solid transparent;
+    }
+
+    .project-banner{
+        outline: 8px solid white;
+        background-color: #000;
+    }
+    .project-title{
+        color: white;
+    }
+    .project-tag{
+        color: black;
+        background-color: white;
     }
 }
 .wide-degree-img{
